<resources>
    <string name="app_name">MasryTechn</string>
    <string name="create_new_account">Create new account</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="noUserName">No User Name</string>
    <string name="noPassword">No Password</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="noPhone">No Phone</string>
    <string name="noEmail">No Email</string>
    <string name="date_and_time_order">Choose Trip Time</string>
    <string name="immediately">now</string>
    <string name="later">later</string>
    <string name="date">Date</string>
    <string name="day">Day</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="time">Time</string>
    <string name="about_order">More details about order</string>
    <string name="car_info">Car Info</string>
    <string name="car_type">Car Type</string>
    <string name="choose_car_image">Choose Car Image</string>
    <string name="panal_id">Panal Number</string>
    <string name="maximum_weight">Maximum weight</string>
    <string name="driver_name">Driver Name</string>
    <string name="city">City</string>
    <string name="ok">OK</string>
    <string name="order_owner">Order Owner</string>
    <string name="order_type">Order Type</string>
    <string name="nglah_type">Nglah Type</string>
    <string name="details">Nglah Details</string>
    <string name="price">Price</string>
    <string name="order_page">Order Page</string>
</resources>
