<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#535252">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/order_page"
            android:textColor="@android:color/white"
            android:textSize="30dp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/order_owner"
                android:textColor="@color/mdtp_white"
                android:textSize="20sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tv_nglah_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="اسم صاحب النقله"
                android:textColor="#fff"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/order_type"
                android:textColor="@color/mdtp_white"
                android:textSize="20sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tv_order_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#fff"
                android:text="نوع الطلب"
                android:textSize="20sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:id="@+id/container"

            android:weightSum="2">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:textColor="@color/mdtp_white"
                android:textSize="20sp"
                android:text="@string/date"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#fff"
                android:textSize="20sp"
                android:text="26-6-2019"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:id="@+id/container2"

            android:weightSum="2">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:textColor="@color/mdtp_white"
                android:textSize="20sp"
                android:text="@string/time"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/tv_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#fff"
                android:textSize="20sp"
                android:text="1.00 PM"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/nglah_type"
                android:textColor="@color/mdtp_white"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tv_thing_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:textColor="#fff"
                android:textSize="20sp"
                android:text="سياره صغيره"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/city"
                android:textColor="@color/mdtp_white"
                android:textStyle="bold"

                android:textSize="20sp"
                />


            <TextView
                android:id="@+id/tv_city"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:textColor="#fff"
                android:textSize="20sp"
                android:text="جده"
                />


        </LinearLayout>

        <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="30dp"-->
        <!--android:gravity="center"-->
        <!--android:orientation="horizontal"-->
        <!--android:weightSum="2">-->

        <!--<TextView-->
        <!--android:id="@+id/textView9"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:gravity="center"-->
        <!--android:layout_weight="1"-->
        <!--android:text="القطاع"-->
        <!--android:textColor="@color/yello"-->
        <!--android:textStyle="bold"-->
        <!--android:textSize="20sp"-->
        <!--/>-->

        <!--<TextView-->
        <!--android:id="@+id/tv_sector"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_weight="1"-->
        <!--android:gravity="center"-->
        <!--android:textColor="#fff"-->
        <!--android:textSize="20sp"-->
        <!--android:text="الجنوبى"-->
        <!--/>-->


        <!--</LinearLayout>-->

        <TextView
            android:id="@+id/tv_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#C2C1C1"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/details"
            android:gravity="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:textColor="@color/mdtp_white"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                android:textSize="20sp"
                android:text="@string/price"
                />


            <EditText
                android:id="@+id/et_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:ems="10"
                android:hint="@string/price"
                android:inputType="phone"
                android:minLines="1"
                android:textColor="#535252"
                android:background="@drawable/bottonshape"
                android:textColorHint="#535252"
                android:textSize="20sp" />


        </LinearLayout>

        <Button
            android:id="@+id/bt_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:textColor="#535252"
            android:background="@drawable/btn_style"
            android:text="@string/submit"
            android:textSize="20sp"
            android:textStyle="bold"

            />


    </LinearLayout>

</ScrollView>