<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.Pick_Time.Pick_time">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/mdtp_white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#535252">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="#535252">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imgBackRecent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/_15sdp"
                        android:src="@drawable/ic_arrow_w_black_24dp"
                        android:tint="#fff" />

                </RelativeLayout>
            </androidx.appcompat.widget.Toolbar>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_47sdp"
                android:layout_gravity="top|center"
                android:layout_marginLeft="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:layout_marginRight="@dimen/_40sdp"
                android:gravity="center"
                android:text="@string/date_and_time_order"
                android:fontFamily="@font/lemon"
                android:textColor="#fff"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#535252"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_20sdp">




                <Button
                    android:id="@+id/now"
                    android:layout_width="@dimen/_130sdp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/btn_style"
                    android:layout_alignParentStart="true"
                    android:onClick="Now"
                    android:text="@string/immediately"
                    android:textColor="#535252"
                    android:textSize="@dimen/_18ssp"
                    android:textStyle="bold"
                    android:fontFamily="@font/lemon"/>

                <Button
                    android:id="@+id/later"
                    android:layout_width="@dimen/_130sdp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center"
                    android:background="@drawable/btn_style"
                    android:fontFamily="@font/lemon"
                    android:onClick="Now"
                    android:text="@string/later"
                    android:textColor="#535252"
                    android:textSize="@dimen/_18ssp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:orientation="horizontal"
                    >
                    <TextView
                        android:id="@+id/date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#fff"
                        android:text="@string/date"
                        android:textColor="#000"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_marginRight="@dimen/_20sdp"
                        android:textSize="@dimen/_16ssp"
                        android:layout_gravity="center_vertical"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/mdtp_white"
                        android:text="@string/day"
                        android:textColor="#000"
                        android:layout_gravity="center_vertical"
                        android:textSize="@dimen/_16ssp"
                        android:textStyle="bold" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginTop="30dp"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:background="#fff"
                        android:text="@string/time"
                        android:textColor="#000"
                        android:textSize="@dimen/_16ssp"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_marginRight="@dimen/_20sdp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/mdtp_white"
                        android:text="@string/day"
                        android:textColor="#000"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:textSize="@dimen/_16ssp"
                        android:textStyle="bold" />

                </LinearLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_47sdp"
                    android:layout_gravity="top|center"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginRight="40dp"
                    android:gravity="center"
                    android:text="@string/about_order"
                    android:textColor="#000"
                    android:textSize="@dimen/_18ssp"
                    android:textStyle="bold"
                    android:fontFamily="@font/lemon"/>


                <EditText
                    android:id="@+id/details"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_65sdp"
                    android:layout_gravity="top|center"
                    android:layout_marginLeft="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_30sdp"
                    android:background="@drawable/bottonshape"
                    android:gravity="center"
                    android:hint="@string/about_order"
                    android:textColor="#000"
                    android:textSize="@dimen/_16ssp"
                    android:textStyle="bold" />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:layout_marginBottom="@dimen/_30sdp"
                    android:background="@color/mdtp_white"
                    android:orientation="horizontal"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp">

                    <Button
                        android:layout_width="@dimen/_130sdp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top|center"
                        android:layout_alignParentStart="true"
                        android:background="@drawable/order_btn_style"
                        android:onClick="Order"
                        android:text="@string/submit"
                        android:textColor="#fff"
                        android:textSize="@dimen/_16ssp"
                        android:textStyle="bold" />

                    <Button
                        android:layout_width="@dimen/_130sdp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top|center"
                        android:layout_alignParentEnd="true"
                        android:background="@drawable/cancel_btn_style"
                        android:onClick="Cancle"
                        android:text="@string/cancel"
                        android:textColor="#fff"
                        android:textSize="@dimen/_16ssp"
                        android:textStyle="bold" />


                </RelativeLayout>


        </LinearLayout>


</ScrollView>